@@ -1,6 +1,8 @@
 1.2 - [RELEASEDATE]
 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
 
+- Implemented issue #9383: Ability to set file permissions on created files.
+- Added ezcCacheStorageFileOptions class.
 - Fixed issue #10678: ezcCacheStorageOptions throws incorrect exceptions.
 
 1.1.4 - Monday 18 December 2006
